--- a/index.html
+++ b/index.html
@@ -250,153 +250,302 @@
 		}
 	</script>
 	<!-- Complete Carousel Section -->
-	<div class="relative overflow-hidden min-h-screen bg-gray-50">
+	<div class="relative overflow-hidden min-h-screen ">
 		<!-- Background Texture -->
-		<div class="absolute inset-0 bg-[url('./bgimg.png')] bg-cover opacity-10"></div>
+		<div class="absolute inset-0 bg-[url('./fsdgdgdfg.png')] bg-cover opacity-1"></div>
 
-		<!-- Slide 1 - Online Courses -->
-		<section class="section-slide h-screen w-full flex items-center py-12 md:py-24 relative snap-start" id="slide1">
-			<div
-				class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-24 relative z-10 w-full">
-				<!-- Left Content -->
-				<div class="md:w-1/2 space-y-8">
-					<h1 class="text-4xl md:text-5xl font-medium text-gray-900 sm:mt-[20%]">
-						<span class="block">ONLAYN</span>
-						<span class="block text-[#00D084]">QUR'ON DARSLARI</span>
-					</h1>
-
-					<div class="space-y-6">
-						<p class="text-gray-700 text-lg leading-relaxed">
-							Dunyoning istalgan nuqtasidan turib Qur'on va arab tilini o'rganing. Malakali ustozlar
-							bilan 2 oy ichida to'g'ri o'qishni o'rganasiz.
-						</p>
-
-						<div class="space-y-4">
-							<div class="flex items-start gap-4">
-								<div
-									class="mt-1 w-5 h-5 rounded-full bg-[#00D084] flex items-center justify-center flex-shrink-0">
-									<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-										<path fill-rule="evenodd"
-											d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-											clip-rule="evenodd" />
-									</svg>
-								</div>
-								<p class="text-gray-700">Har bir dars 60 daqiqa davom etadi</p>
-							</div>
-
-							<div class="flex items-start gap-4">
-								<div
-									class="mt-1 w-5 h-5 rounded-full bg-[#00D084] flex items-center justify-center flex-shrink-0">
-									<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-										<path fill-rule="evenodd"
-											d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-											clip-rule="evenodd" />
-									</svg>
-								</div>
-								<p class="text-gray-700">Individual dastur va yondashuv</p>
-							</div>
-						</div>
-					</div>
-
-					<button
-						class="bg-[#00D084] hover:bg-[#00B877] text-white px-8 py-4 rounded-xl font-medium text-lg transition-all duration-300 shadow-md hover:shadow-lg">
-						Ro'yxatdan o'tish
-					</button>
+		<!-- Section 1 - Main Introduction -->
+		<!-- Section 1 - Main Introduction -->
+		<!-- Section 1 - Main Introduction -->
+		<section
+			class="min-h-screen flex items-center text-white py-8 md:py-12 relative bg-cover bg-center bg-no-repeat"
+			style="background-image: url('your-green-bg-image.jpg');">
+			<!-- Green-toned overlay for better text readability -->
+			<div class="absolute inset-0 bg-green-900/20"></div>
+			<!-- Animated Background Elements -->
+			<div class="absolute inset-0 overflow-hidden pointer-events-none">
+				<div
+					class="floating-elements absolute top-10 md:top-20 left-5 md:left-10 w-12 md:w-32 h-12 md:h-32 bg-white/10 rounded-full">
 				</div>
-
-				<!-- Right Content - Interactive Image -->
-				<div class="md:w-1/2 h-full">
-					<div class="relative group interactive-image h-full">
-						<div class="absolute -inset-3 rotate-1 transition-all duration-500 group-hover:rotate-2"></div>
-						<div class="relative overflow-hidden">
-							<img src="./hero.png" alt="Online darslar"
-								class="w-full h-full object-cover transition-all duration-500">
-							<div class="absolute inset-0"></div>
-							<div class="absolute bottom-6 left-6 right-6 text-white">
-								<h3 class="text-xl font-medium">Ustoz Muhammadjon</h3>
-								<p class="text-white/90">10 yillik tajriba</p>
-							</div>
-						</div>
-					</div>
-				</div>
+				<div class="floating-elements absolute bottom-10 md:bottom-20 right-10 md:right-20 w-8 md:w-24 h-8 md:w-24 bg-white/5 rounded-full"
+					style="animation-delay: 0.5s;"></div>
+				<div class="floating-elements absolute top-1/2 left-1/4 w-6 md:w-16 h-6 md:h-16 bg-white/8 rounded-full"
+					style="animation-delay: 1s;"></div>
+				<div class="absolute top-1/3 right-1/3 w-4 md:w-12 h-4 md:h-12 bg-yellow-300/20 rotate-45"></div>
 			</div>
 
-			<!-- Scroll indicator -->
-			<div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 animate-bounce">
-				<svg class="w-6 h-6 text-[#00D084]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-						d="M19 14l-7 7m0 0l-7-7m7 7V3" />
-				</svg>
-			</div>
-		</section>
+			<div class="max-w-7xl mx-auto px-4 md:px-8 relative z-10 w-full">
+				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-16 items-center">
+					<!-- Left Content -->
+					<div class="space-y-6 md:space-y-8 order-2 lg:order-1">
+						<div class="space-y-4 md:space-y-6">
+							<!-- Main Heading -->
+							<h1 class="text-3xl md:text-5xl lg:text-6xl font-black leading-tight"
+								style="text-shadow: 2px 2px 4px rgba(0,0,0,0.7), 0 0 10px rgba(0,0,0,0.5);">
+								<span class="text-white">ARAB TILI</span><br>
+								<span class="text-yellow-300">VA QUR'ON</span><br>
+								<span
+									class="text-white/95 text-xl md:text-3xl lg:text-4xl font-semibold">DARSLARI</span>
+							</h1>
 
-		<!-- Slide 2 - Offline Academy -->
-		<section class="section-slide h-screen w-full flex items-center py-12 md:py-24 relative snap-start" id="slide2">
-			<div
-				class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-24 relative z-10 w-full">
-				<!-- Left Content -->
-				<div class="md:w-1/2 space-y-8">
-					<h1 class="text-4xl md:text-5xl font-medium text-gray-900 sm:mt-10">
-						<span class="block">MUHIB</span>
-						<span class="block text-[#00D084]">ACADEMY</span>
-					</h1>
-
-					<div class="space-y-6">
-						<p class="text-gray-700 text-lg leading-relaxed">
-							Zamonaviy darsxonalarda shaxsan darslar. Qur'on, arab tili va islomiy fanlar bo'yicha
-							malakali ustozlar.
-						</p>
-
-						<div class="space-y-4">
-							<div class="flex items-start gap-4">
-								<div
-									class="mt-1 w-5 h-5 rounded-full bg-[#00D084] flex items-center justify-center flex-shrink-0">
-									<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-										<path fill-rule="evenodd"
-											d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-											clip-rule="evenodd" />
-									</svg>
-								</div>
-								<p class="text-gray-700">Qulay va zamonaviy darsxonalar</p>
+							<div
+								class="bg-green-900/40 backdrop-blur-md rounded-2xl p-4 md:p-6 border border-white/20 shadow-2xl">
+								<p class="text-base md:text-xl text-white leading-relaxed font-medium mb-3"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+									<strong class="text-yellow-300">Muhib academy</strong> – Ilm, tarbiya va e'tiqod
+									uyg'unligidagi makon!
+								</p>
+								<p class="text-sm md:text-base text-white/90 leading-relaxed"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+									Men <strong class="text-yellow-300">Muhibulloh Noʻmonov</strong>, sizni bu yerda
+									ko'rib turganimdan xursandman! Dunyoning qaysi nuqtasida bo'lishingizdan qat'iy
+									nazar, sizga Qur'onni o'rgatishga tayyorman.
+								</p>
 							</div>
+						</div>
 
-							<div class="flex items-start gap-4">
-								<div
-									class="mt-1 w-5 h-5 rounded-full bg-[#00D084] flex items-center justify-center flex-shrink-0">
-									<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-										<path fill-rule="evenodd"
-											d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-											clip-rule="evenodd" />
-									</svg>
-								</div>
-								<p class="text-gray-700">Tajribali o'qituvchilar bilan shaxsan darslar</p>
+						<!-- Course Information Card -->
+						<div
+							class="rounded-2xl p-4 md:p-8 border-2 border-yellow-300/60 shadow-2xl bg-green-900/50 backdrop-blur-xl pulse-glow">
+							<div class="flex items-center gap-3 mb-4">
+								<div class="w-3 h-3 bg-yellow-300 rounded-full animate-pulse"></div>
+								<span class="text-yellow-300 font-bold text-sm md:text-base tracking-wide"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">📚 ONLAYN KURS!</span>
 							</div>
+							<p class="text-sm md:text-base leading-relaxed mb-4 text-white font-semibold"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								<strong>2 oy ichida onlayn darslar orqali Qur'onni to'g'ri o'qishni o'rganasiz.</strong>
+							</p>
+							<p class="text-white/90 leading-relaxed text-sm md:text-base mb-3"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								Darslarimiz sizga ma'qul kelishiga ishonaman, inshAllah.
+							</p>
+							<p class="text-white/90 leading-relaxed text-sm md:text-base"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								<strong class="text-yellow-300">Agar ma'qul kelmasa, 7 kun ichida to'lovingiz
+									qaytariladi.</strong>
+							</p>
+						</div>
+
+						<!-- Call to Action Button -->
+						<div class="flex justify-center lg:justify-start">
+							<button
+								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
+								<span class="flex items-center gap-2">
+									📹 Birinchi Bepul Darsni Ko'rish
+									<svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none"
+										stroke="currentColor" viewBox="0 0 24 24">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+											d="M9 5l7 7-7 7" />
+									</svg>
+								</span>
+							</button>
 						</div>
 					</div>
 
-					<button
-						class="bg-[#00D084] hover:bg-[#00B877] text-white px-8 py-4 rounded-xl font-medium text-lg transition-all duration-300 shadow-md hover:shadow-lg">
-						Bog'lanish
-					</button>
-				</div>
+					<!-- Right Content -->
+					<div class="relative order-1 lg:order-2">
+						<!-- Special Badge -->
+						<div
+							class="absolute -top-4 -left-4 bg-yellow-400 text-gray-900 rounded-full px-4 py-2 md:px-6 md:py-4 shadow-2xl z-20 animate-bounce">
+							<span class="font-black text-sm md:text-xl">YANGI!</span>
+							<p class="text-xs font-bold">Darslar boshlandi</p>
+						</div>
 
-				<!-- Right Content - Interactive Image -->
-				<div class="md:w-1/2 h-full">
-					<div class="relative group interactive-image h-full">
-						<div class="absolute -inset-3 transition-all duration-500"></div>
-						<div class="relative overflow-hidden h-full">
-							<img src="./hero2.png" alt="Offline darslar"
-								class="w-full h-full object-cover transition-all duration-500">
-							<div class="absolute inset-0 rounded-xl"></div>
-							<div class="absolute bottom-6 left-6 right-6 text-white">
-								<h3 class="text-xl font-medium">Ustoz Abdulaziz</h3>
-								<p class="text-white/90">8 yillik tajriba</p>
+						<!-- Teacher Card -->
+						<div
+							class="relative z-10 rounded-2xl sm:rounded-3xl p-3 sm:p-8 bg-green-900/50 backdrop-blur-xl border-2 border-white/40 shadow-2xl hover:shadow-3xl hover:scale-105 transition-all duration-500">
+							<div class="text-center space-y-3 sm:space-y-6">
+								<!-- Enhanced Teacher Image -->
+								<div
+									class="relative mx-auto w-full sm:w-[380px] h-[40vh] sm:h-[350px] rounded-xl sm:rounded-2xl overflow-hidden shadow-2xl border-4 border-white/30">
+									<img src="./hero.png" alt="Muhibulloh Ustoz"
+										class="w-full h-full object-cover object-top hover:scale-110 transition-transform duration-500" />
+
+									<!-- Enhanced Gradient Overlay -->
+									<div
+										class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent">
+									</div>
+
+									<!-- Enhanced Teacher Info -->
+									<div class="absolute bottom-0 left-0 right-0 p-2 sm:p-6 text-white z-10">
+										<h2 class="text-sm sm:text-xl font-black mb-1"
+											style="text-shadow: 2px 2px 4px rgba(0,0,0,0.9);">Muhibulloh Noʻmonov</h2>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+
+		<!-- Section 2 - Why Muhib Academy -->
+		<section
+			class="min-h-screen flex items-center text-white py-8 md:py-12 relative bg-cover bg-center bg-no-repeat"
+			style="background-image: url('your-green-bg-image.jpg');">
+			<!-- Green-toned overlay for better text readability -->
+			<div class="absolute inset-0 bg-green-900/20"></div>
+			<!-- Animated Background Elements -->
+			<div class="absolute inset-0 overflow-hidden pointer-events-none">
+				<div
+					class="floating-elements absolute top-10 md:top-20 left-5 md:left-10 w-12 md:w-32 h-12 md:h-32 bg-white/10 rounded-full">
+				</div>
+				<div class="floating-elements absolute bottom-10 md:bottom-20 right-10 md:right-20 w-8 md:w-24 h-8 md:w-24 bg-white/5 rounded-full"
+					style="animation-delay: 0.5s;"></div>
+				<div class="floating-elements absolute top-1/2 left-1/4 w-6 md:w-16 h-6 md:h-16 bg-white/8 rounded-full"
+					style="animation-delay: 1s;"></div>
+				<div class="absolute top-1/3 right-1/3 w-4 md:w-12 h-4 md:h-12 bg-yellow-300/20 rotate-45"></div>
+			</div>
+
+			<div class="max-w-7xl mx-auto px-4 md:px-8 relative z-10 w-full">
+				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-16 items-center">
+					<!-- Left Content -->
+					<div class="space-y-6 md:space-y-8 order-2 lg:order-1">
+						<div class="space-y-4 md:space-y-6">
+							<!-- Main Heading -->
+							<h1 class="text-3xl md:text-5xl lg:text-6xl font-black leading-tight"
+								style="text-shadow: 2px 2px 4px rgba(0,0,0,0.7), 0 0 10px rgba(0,0,0,0.5);">
+								<span class="text-white">NEGA AYNAN</span><br>
+								<span class="text-yellow-300">MUHIB</span><br>
+								<span
+									class="text-white/95 text-xl md:text-3xl lg:text-4xl font-semibold">ACADEMY?</span>
+							</h1>
+
+							<div
+								class="bg-green-900/40 backdrop-blur-md rounded-2xl p-4 md:p-6 border border-white/20 shadow-2xl">
+								<p class="text-base md:text-xl text-white leading-relaxed font-medium mb-3"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+									<strong class="text-yellow-300">Dunyoning istalgan nuqtasidan</strong> turib biz
+									bilan bog'laning va Qur'on va arab tilini o'rganishni boshlang.
+								</p>
+								<p class="text-sm md:text-base text-white/90 leading-relaxed"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+									Bizning zamonaviy metodlarimiz orqali sifatli ta'lim olishingiz kafolatlangan.
+								</p>
+							</div>
+						</div>
+
+						<!-- Course Information Card -->
+						<div
+							class="rounded-2xl p-4 md:p-8 border-2 border-yellow-300/60 shadow-2xl bg-green-900/50 backdrop-blur-xl pulse-glow">
+							<div class="flex items-center gap-3 mb-4">
+								<div class="w-3 h-3 bg-yellow-300 rounded-full animate-pulse"></div>
+								<span class="text-yellow-300 font-bold text-sm md:text-base tracking-wide"
+									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">✅ BIZ KAFOLATLAYMIZ!</span>
+							</div>
+							<p class="text-sm md:text-base leading-relaxed mb-4 text-white font-semibold"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								<strong>Har bir o'quvchiga individual yondashuv va professional ta'lim.</strong>
+							</p>
+							<p class="text-white/90 leading-relaxed text-sm md:text-base mb-3"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								6+ yillik tajribaga ega ustozlar sizga yordam beradi.
+							</p>
+							<p class="text-white/90 leading-relaxed text-sm md:text-base"
+								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
+								<strong class="text-yellow-300">Interaktiv, samarali va zamonaviy o'qitish
+									metodlari.</strong>
+							</p>
+						</div>
+
+						<!-- Call to Action Button -->
+						<div class="flex justify-center lg:justify-start">
+							<button
+								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
+								<span class="flex items-center gap-2">
+									🚀 Hoziroq Kursga Yozilish
+									<svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none"
+										stroke="currentColor" viewBox="0 0 24 24">
+										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+											d="M9 5l7 7-7 7" />
+									</svg>
+								</span>
+							</button>
+						</div>
+					</div>
+
+					<!-- Right Content -->
+					<div class="relative order-1 lg:order-2">
+						<!-- Special Badge -->
+						<div
+							class="absolute -top-4 -left-4 bg-yellow-400 text-gray-900 rounded-full px-4 py-2 md:px-6 md:py-4 shadow-2xl z-20 animate-bounce">
+							<span class="font-black text-sm md:text-xl">6+</span>
+							<p class="text-xs font-bold">yil tajriba</p>
+						</div>
+
+						<!-- Teacher Card -->
+						<div
+							class="relative z-10 rounded-2xl sm:rounded-3xl p-3 sm:p-8 bg-green-900/50 backdrop-blur-xl border-2 border-white/40 shadow-2xl hover:shadow-3xl hover:scale-105 transition-all duration-500">
+							<div class="text-center space-y-3 sm:space-y-6">
+								<!-- Enhanced Teacher Image -->
+								<div
+									class="relative mx-auto w-full sm:w-[380px] h-[40vh] sm:h-[350px] rounded-xl sm:rounded-2xl overflow-hidden shadow-2xl border-4 border-white/30">
+									<img src="./hero2.png" alt="Muhibulloh Ustoz"
+										class="w-full h-full object-cover object-top hover:scale-110 transition-transform duration-500" />
+
+									<!-- Enhanced Gradient Overlay -->
+									<div
+										class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent">
+									</div>
+
+									<!-- Enhanced Teacher Info -->
+									<div class="absolute bottom-0 left-0 right-0 p-2 sm:p-6 text-white z-10">
+										<h2 class="text-sm sm:text-xl font-black mb-1"
+											style="text-shadow: 2px 2px 4px rgba(0,0,0,0.9);">Muhibulloh Noʻmonov</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<style>
+			@keyframes float {
+
+				0%,
+				100% {
+					transform: translateY(0px);
+				}
+
+				50% {
+					transform: translateY(-20px);
+				}
+			}
+
+			.floating-elements {
+				animation: float 6s ease-in-out infinite;
+			}
+
+			@keyframes pulse-glow {
+
+				0%,
+				100% {
+					box-shadow: 0 0 20px rgba(255, 193, 7, 0.3);
+				}
+
+				50% {
+					box-shadow: 0 0 30px rgba(255, 193, 7, 0.6), 0 0 40px rgba(255, 193, 7, 0.4);
+				}
+			}
+
+			.pulse-glow {
+				animation: pulse-glow 2s ease-in-out infinite;
+			}
+
+			/* Responsive adjustments for mobile */
+			@media (max-width: 768px) {
+				section {
+					min-height: auto;
+				}
+
+				.floating-elements {
+					display: none;
+				}
+			}
+		</style>
 	</div>
 
 	<style>
