--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 			<div class="max-w-7xl  px-4 md:px-8 relative z-10 w-full">
 				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-16 items-center">
 					<!-- Left Content -->
-					<div class="space-y-6 md:space-y-8 order-2 lg:order-1">
+					<div class="space-y-6 md:space-y-8 order-2 lg:order-1 mt-12">
 						<div class="space-y-4 md:space-y-6">
 							<!-- Main Heading -->
 							<h1 class="text-3xl md:text-5xl lg:text-6xl font-black leading-tight"
@@ -405,7 +405,7 @@
 					<div class="relative order-1 lg:order-2">
 						<!-- Special Badge -->
 						<div
-							class="absolute -top-4 -left-4 bg-yellow-400 text-gray-900 rounded-full px-4 py-2 md:px-6 md:py-4 shadow-2xl z-20 animate-bounce">
+							class="absolute -top-4 -left-4 bg-yellow-400 text-gray-900 rounded-full px-4 py-2 md:px-6 md:py-4 shadow-2xl z-20 animate-bounce mt-10">
 							<span class="font-black text-sm md:text-xl">OFFLINE</span>
 							<p class="text-xs font-bold">darslar boshlandi</p>
 						</div>
@@ -419,27 +419,27 @@
 
 		<!-- Online Modal -->
 		<div id="onlineModal" class="modal">
-			<div class="modal-content bg-white rounded-3xl p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
+			<div class="modal-content bg-white rounded-3xl p-4 md:p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
 				<div class="flex justify-between items-center mb-6">
-					<h2 class="text-3xl font-bold text-green-800">Online Qur'on Darslari</h2>
+					<h2 class="text-xl md:text-3xl font-bold" style="color: #6bbd89;">Online Qur'on Darslari</h2>
 					<button onclick="closeModal('onlineModal')"
-						class="text-gray-500 hover:text-gray-700 text-3xl">&times;</button>
+						class="text-gray-500 hover:text-gray-700 text-2xl md:text-3xl">&times;</button>
 				</div>
 
-				<div class="space-y-6">
-					<div class="bg-green-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-green-700 mb-3">📚 Dars Tarkibi</h3>
-						<ul class="space-y-2 text-gray-700">
-							<li>✅ Qur'on o'qish (Tajvid bilan)</li>
-							<li>✅ Arab tili asoslari</li>
-							<li>✅ Tafsir va ma'nolar</li>
-							<li>✅ Islomiy adab va axloq</li>
+				<div class="space-y-4 md:space-y-6">
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Dars Tarkibi</h3>
+						<ul class="space-y-2 text-gray-700 text-sm md:text-base">
+							<li>Qur'on o'qish (Tajvid bilan)</li>
+							<li>Arab tili asoslari</li>
+							<li>Tafsir va ma'nolar</li>
+							<li>Islomiy adab va axloq</li>
 						</ul>
 					</div>
 
-					<div class="bg-yellow-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-yellow-700 mb-3">⏰ Dars Jadvali</h3>
-						<div class="grid md:grid-cols-2 gap-4 text-gray-700">
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Dars Jadvali</h3>
+						<div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-gray-700 text-sm md:text-base">
 							<div>
 								<p><strong>Dushanba - Juma:</strong> 18:00 - 19:30</p>
 								<p><strong>Shanba:</strong> 16:00 - 17:30</p>
@@ -451,39 +451,41 @@
 						</div>
 					</div>
 
-					<div class="bg-blue-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-blue-700 mb-3">💰 Narxlar</h3>
-						<div class="grid md:grid-cols-2 gap-4">
-							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
-								<h4 class="font-semibold text-blue-800">Boshlang'ich</h4>
-								<p class="text-2xl font-bold text-blue-600">150,000 so'm/oy</p>
-								<p class="text-sm text-gray-600">Asosiy Qur'on o'qish</p>
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Narxlar</h3>
+						<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Boshlang'ich</h4>
+								<p class="text-xl md:text-2xl font-bold" style="color: #6bbd89;">150,000 so'm/oy</p>
+								<p class="text-xs md:text-sm text-gray-600">Asosiy Qur'on o'qish</p>
 							</div>
-							<div class="bg-white p-4 rounded-lg border-2 border-green-200">
-								<h4 class="font-semibold text-green-800">Ilg'or</h4>
-								<p class="text-2xl font-bold text-green-600">200,000 so'm/oy</p>
-								<p class="text-sm text-gray-600">Tafsir va Arab tili bilan</p>
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Ilg'or</h4>
+								<p class="text-xl md:text-2xl font-bold" style="color: #6bbd89;">200,000 so'm/oy</p>
+								<p class="text-xs md:text-sm text-gray-600">Tafsir va Arab tili bilan</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="bg-purple-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-purple-700 mb-3">🎯 Afzalliklar</h3>
-						<ul class="space-y-2 text-gray-700">
-							<li>🌍 Dunyoning istalgan joyidan qatnashing</li>
-							<li>📱 Zoom orqali interaktiv darslar</li>
-							<li>📋 Shaxsiy dars jadvali</li>
-							<li>🏆 Sertifikat berish</li>
-							<li>📞 24/7 qo'llab-quvvatlash</li>
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Afzalliklar</h3>
+						<ul class="space-y-2 text-gray-700 text-sm md:text-base">
+							<li>Dunyoning istalgan joyidan qatnashing</li>
+							<li>Zoom orqali interaktiv darslar</li>
+							<li>Shaxsiy dars jadvali</li>
+							<li>Sertifikat berish</li>
+							<li>24/7 qo'llab-quvvatlash</li>
 						</ul>
 					</div>
 
 					<div class="text-center">
 						<button
-							class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-green-700 transition-colors">
-							📞 Hoziroq Ro'yxatdan O'ting
+							class="text-white px-6 md:px-8 py-3 md:py-4 rounded-xl font-bold text-base md:text-lg transition-colors"
+							style="background-color: #6bbd89;" onmouseover="this.style.opacity='0.8'"
+							onmouseout="this.style.opacity='1'">
+							Hoziroq Ro'yxatdan O'ting
 						</button>
-						<p class="text-sm text-gray-600 mt-2">Telefon: +998 90 123 45 67</p>
+						<p class="text-xs md:text-sm text-gray-600 mt-2">Telefon: +998 90 123 45 67</p>
 					</div>
 				</div>
 			</div>
@@ -491,56 +493,59 @@
 
 		<!-- Offline Modal -->
 		<div id="offlineModal" class="modal">
-			<div class="modal-content bg-white rounded-3xl p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
+			<div class="modal-content bg-white rounded-3xl p-4 md:p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
 				<div class="flex justify-between items-center mb-6">
-					<h2 class="text-3xl font-bold text-green-800">Offline Qur'on Darslari</h2>
+					<h2 class="text-xl md:text-3xl font-bold" style="color: #6bbd89;">Offline Qur'on Darslari</h2>
 					<button onclick="closeModal('offlineModal')"
-						class="text-gray-500 hover:text-gray-700 text-3xl">&times;</button>
+						class="text-gray-500 hover:text-gray-700 text-2xl md:text-3xl">&times;</button>
 				</div>
 
-				<div class="space-y-6">
-					<div class="bg-green-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-green-700 mb-3">🏢 Dars Joylari</h3>
-						<div class="space-y-3 text-gray-700">
-							<div class="flex items-center space-x-3">
-								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+				<div class="space-y-4 md:space-y-6">
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Dars Joylari</h3>
+						<div class="space-y-3 text-gray-700 text-sm md:text-base">
+							<div class="flex items-start space-x-3">
+								<span class="w-2 h-2 mt-2 rounded-full flex-shrink-0"
+									style="background-color: #6bbd89;"></span>
 								<span><strong>Markaz filiali:</strong> Toshkent sh., Chilonzor tumani</span>
 							</div>
-							<div class="flex items-center space-x-3">
-								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+							<div class="flex items-start space-x-3">
+								<span class="w-2 h-2 mt-2 rounded-full flex-shrink-0"
+									style="background-color: #6bbd89;"></span>
 								<span><strong>Yunusobod filiali:</strong> Toshkent sh., Yunusobod tumani</span>
 							</div>
-							<div class="flex items-center space-x-3">
-								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+							<div class="flex items-start space-x-3">
+								<span class="w-2 h-2 mt-2 rounded-full flex-shrink-0"
+									style="background-color: #6bbd89;"></span>
 								<span><strong>Samarqand filiali:</strong> Samarqand sh., Registon ko'chasi</span>
 							</div>
 						</div>
 					</div>
 
-					<div class="bg-orange-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-orange-700 mb-3">👥 Guruh Turlari</h3>
-						<div class="grid md:grid-cols-3 gap-4">
-							<div class="bg-white p-4 rounded-lg border-2 border-orange-200">
-								<h4 class="font-semibold text-orange-800">Bolalar</h4>
-								<p class="text-sm text-gray-600">6-12 yosh</p>
-								<p class="text-sm text-gray-600">5-8 kishi</p>
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Guruh Turlari</h3>
+						<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Bolalar</h4>
+								<p class="text-xs md:text-sm text-gray-600">6-12 yosh</p>
+								<p class="text-xs md:text-sm text-gray-600">5-8 kishi</p>
 							</div>
-							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
-								<h4 class="font-semibold text-blue-800">O'smirlar</h4>
-								<p class="text-sm text-gray-600">13-18 yosh</p>
-								<p class="text-sm text-gray-600">8-12 kishi</p>
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">O'smirlar</h4>
+								<p class="text-xs md:text-sm text-gray-600">13-18 yosh</p>
+								<p class="text-xs md:text-sm text-gray-600">8-12 kishi</p>
 							</div>
-							<div class="bg-white p-4 rounded-lg border-2 border-purple-200">
-								<h4 class="font-semibold text-purple-800">Kattalar</h4>
-								<p class="text-sm text-gray-600">18+ yosh</p>
-								<p class="text-sm text-gray-600">10-15 kishi</p>
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Kattalar</h4>
+								<p class="text-xs md:text-sm text-gray-600">18+ yosh</p>
+								<p class="text-xs md:text-sm text-gray-600">10-15 kishi</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="bg-yellow-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-yellow-700 mb-3">⏰ Dars Vaqtlari</h3>
-						<div class="grid md:grid-cols-2 gap-4 text-gray-700">
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Dars Vaqtlari</h3>
+						<div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-gray-700 text-sm md:text-base">
 							<div>
 								<p><strong>Ertalabki:</strong> 08:00 - 09:30</p>
 								<p><strong>Kechki:</strong> 18:00 - 19:30</p>
@@ -552,40 +557,43 @@
 						</div>
 					</div>
 
-					<div class="bg-green-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-green-700 mb-3">💰 Offline Narxlar</h3>
-						<div class="grid md:grid-cols-2 gap-4">
-							<div class="bg-white p-4 rounded-lg border-2 border-green-200">
-								<h4 class="font-semibold text-green-800">Guruh darslari</h4>
-								<p class="text-2xl font-bold text-green-600">120,000 so'm/oy</p>
-								<p class="text-sm text-gray-600">8-15 kishilik guruh</p>
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Offline Narxlar</h3>
+						<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Guruh darslari</h4>
+								<p class="text-xl md:text-2xl font-bold" style="color: #6bbd89;">120,000 so'm/oy</p>
+								<p class="text-xs md:text-sm text-gray-600">8-15 kishilik guruh</p>
 							</div>
-							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
-								<h4 class="font-semibold text-blue-800">Yakka darslar</h4>
-								<p class="text-2xl font-bold text-blue-600">300,000 so'm/oy</p>
-								<p class="text-sm text-gray-600">Individual yondashuv</p>
+							<div class="bg-gray-50 p-4 rounded-lg border-2" style="border-color: #6bbd89;">
+								<h4 class="font-semibold" style="color: #6bbd89;">Yakka darslar</h4>
+								<p class="text-xl md:text-2xl font-bold" style="color: #6bbd89;">300,000 so'm/oy</p>
+								<p class="text-xs md:text-sm text-gray-600">Individual yondashuv</p>
 							</div>
 						</div>
 					</div>
 
-					<div class="bg-indigo-50 p-6 rounded-xl">
-						<h3 class="text-xl font-semibold text-indigo-700 mb-3">🎯 Offline Afzalliklar</h3>
-						<ul class="space-y-2 text-gray-700">
-							<li>👨‍🏫 To'g'ridan-to'g'ri ustoz bilan muloqot</li>
-							<li>📚 Bepul o'quv materiallari</li>
-							<li>🤝 Boshqa o'quvchilar bilan hamkorlik</li>
-							<li>🏆 Muntazam baholash va taqdirlar</li>
-							<li>☕ Choy va gazak bilan dam olish</li>
+					<div class="bg-white p-4 md:p-6 rounded-xl border-2" style="border-color: #6bbd89;">
+						<h3 class="text-lg md:text-xl font-semibold mb-3" style="color: #6bbd89;">Offline Afzalliklar
+						</h3>
+						<ul class="space-y-2 text-gray-700 text-sm md:text-base">
+							<li>To'g'ridan-to'g'ri ustoz bilan muloqot</li>
+							<li>Bepul o'quv materiallari</li>
+							<li>Boshqa o'quvchilar bilan hamkorlik</li>
+							<li>Muntazam baholash va taqdirlar</li>
+							<li>Choy va gazak bilan dam olish</li>
 						</ul>
 					</div>
 
 					<div class="text-center">
 						<button
-							class="bg-orange-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-orange-700 transition-colors">
-							🏢 Filialga Tashrif Buyuring
+							class="text-white px-6 md:px-8 py-3 md:py-4 rounded-xl font-bold text-base md:text-lg transition-colors"
+							style="background-color: #6bbd89;" onmouseover="this.style.opacity='0.8'"
+							onmouseout="this.style.opacity='1'">
+							Filialga Tashrif Buyuring
 						</button>
-						<p class="text-sm text-gray-600 mt-2">Manzil: Toshkent sh., Chilonzor tumani, A.Navoiy ko'chasi
-							24</p>
+						<p class="text-xs md:text-sm text-gray-600 mt-2">Manzil: Toshkent sh., Chilonzor tumani,
+							A.Navoiy ko'chasi 24</p>
 					</div>
 				</div>
 			</div>
